[project]
name = "risc-v-python"
version = "0.1.0"
description = "RISC-V implementation in Python"
authors = [{ name = "Arnor Nolen", email = "andrey1gorbulin@gmail.com" }]
requires-python = ">3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy > 1.25.2",
    "pyelftools ~= 0.29",
    "textual ~= 0.13.0",
]
packages = [{ include = "risc_v_python" }]

[dependency-groups]
dev = ["textual[dev]>=0.13.0,<0.14"]

[project.scripts]
test = "pytest ./risc_v_python/test_main.py"

[tool.hatch.build.targets.sdist]
include = ["risc_v_python"]

[tool.hatch.build.targets.wheel]
include = ["risc_v_python"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath ="."
venv = ".venv/risc-v-python"
